include/xprs.h


typedef struct xo_prob_struct* XPRSprob;


typedef struct PoolCut* XPRScut;


int XPRS_CC XPRSiisclear(XPRSprob prob);

int XPRS_CC XPRSiisfirst(XPRSprob prob, int iismode, int* status_code);

int XPRS_CC XPRSiisnext(XPRSprob prob, int* status_code);

int XPRS_CC XPRSiisstatus(XPRSprob prob, int* iiscount, int rowsizes[], int colsizes[], double suminfeas[], int numinfeas[]);

int XPRS_CC XPRSiisall(XPRSprob prob);

int XPRS_CC XPRSiiswrite(XPRSprob prob, int number, const char* fn, int filetype, const char* typeflags);

int XPRS_CC XPRSiisisolations(XPRSprob prob, int number);

int XPRS_CC XPRSgetiisdata(XPRSprob prob, int number, int* rownumber, int* colnumber, int miisrow[], int miiscol[], char constrainttype[], char colbndtype[], double duals[], double rdcs[], char isolationrows[], char isolationcols[]);

int XPRS_CC XPRSgetiis(XPRSprob prob, int* ncols, int* nrows, int _miiscol[], int _miisrow[]);

int XPRS_CC XPRSgetpresolvebasis(XPRSprob prob, int _mrowstatus[], int _mcolstatus[]);

int XPRS_CC XPRSloadpresolvebasis(XPRSprob prob, const int _mrowstatus[], const int _mcolstatus[]);

int XPRS_CC XPRSgetglobal(XPRSprob prob, int* ngents, int* nsets, char _sgtype[], int _mgcols[], double _dlim[], char _sstype[], int _msstart[], int _mscols[], double _dref[]);

int XPRS_CC XPRSwriteprob(XPRSprob prob, const char* _sfilename, const char* _sflags);

int XPRS_CC XPRSgetnames(XPRSprob prob, int _itype, char _sbuff[], int first, int last);

int XPRS_CC XPRSgetrowtype(XPRSprob prob, char _srowtype[], int first, int last);

int XPRS_CC XPRSloadsecurevecs(XPRSprob prob, int nrows, int ncols, const int mrow[], const int mcol[]);

int XPRS_CC XPRSgetcoltype(XPRSprob prob, char _coltype[], int first, int last);

int XPRS_CC XPRSgetbasis(XPRSprob prob, int _mrowstatus[], int _mcolstatus[]);

int XPRS_CC XPRSloadbasis(XPRSprob prob, const int _mrowstatus[], const int _mcolstatus[]);

int XPRS_CC XPRSgetindex(XPRSprob prob, int _itype, const char* _sname, int* _iseq);

int XPRS_CC XPRSaddrows(XPRSprob prob, int nrows, int ncoeffs, const char _srowtype[], const double _drhs[], const double _drng[], const int _mstart[], const int _mclind[], const double _dmatval[]);

int XPRS_CC XPRSdelrows(XPRSprob prob, int nrows, const int _mindex[]);

int XPRS_CC XPRSaddcols(XPRSprob prob, int ncols, int ncoeffs, const double _dobj[], const int _mstart[], const int _mrwind[], const double _dmatval[], const double _dbdl[], const double _dbdu[]);

int XPRS_CC XPRSdelcols(XPRSprob prob, int ncols, const int _mindex[]);

int XPRS_CC XPRSchgcoltype(XPRSprob prob, int ncols, const int _mindex[], const char _coltype[]);

int XPRS_CC XPRSchgrowtype(XPRSprob prob, int nrows, const int _mindex[], const char _srowtype[]);

int XPRS_CC XPRSchgbounds(XPRSprob prob, int nbnds, const int _mindex[], const char _sboundtype[], const double _dbnd[]);

int XPRS_CC XPRSchgobj(XPRSprob prob, int ncols, const int _mindex[], const double _dobj[]);

int XPRS_CC XPRSchgcoef(XPRSprob prob, int _irow, int _icol, double _dval);

int XPRS_CC XPRSchgmcoef(XPRSprob prob, int ncoeffs, const int _mrow[], const int _mcol[], const double _dval[]);

int XPRS_CC XPRSchgmqobj(XPRSprob prob, int ncols, const int _mcol1[], const int _mcol2[], const double _dval[]);

int XPRS_CC XPRSchgqobj(XPRSprob prob, int _icol, int _jcol, double _dval);

int XPRS_CC XPRSchgrhs(XPRSprob prob, int nrows, const int _mindex[], const double _drhs[]);

int XPRS_CC XPRSchgrhsrange(XPRSprob prob, int nrows, const int _mindex[], const double _drng[]);

int XPRS_CC XPRSchgobjsense(XPRSprob prob, int objsense);

int XPRS_CC XPRSchgglblimit(XPRSprob prob, int ncols, const int _mindex[], const double _dlimit[]);

int XPRS_CC XPRSsave(XPRSprob prob);

int XPRS_CC XPRSrestore(XPRSprob prob, const char* _sprobname, const char* _force);

int XPRS_CC XPRSpivot(XPRSprob prob, int _in, int _out);

int XPRS_CC XPRSgetpivots(XPRSprob prob, int _in, int _mout[], double _dout[], double* _dobjo, int* npiv, int maxpiv);

int XPRS_CC XPRSaddcuts(XPRSprob prob, int ncuts, const int mtype[], const char qrtype[], const double drhs[], const int mstart[], const int mcols[], const double dmatval[]);

int XPRS_CC XPRSdelcuts(XPRSprob prob, int ibasis, int itype, int interp, double delta, int ncuts, const XPRScut mcutind[]);

int XPRS_CC XPRSdelcpcuts(XPRSprob prob, int itype, int interp, int ncuts, const XPRScut mcutind[]);

int XPRS_CC XPRSgetcutlist(XPRSprob prob, int itype, int interp, int* ncuts, int maxcuts, XPRScut mcutind[]);

int XPRS_CC XPRSgetcpcutlist(XPRSprob prob, int itype, int interp, double delta, int* ncuts, int maxcuts, XPRScut mcutind[], double dviol[]);

int XPRS_CC XPRSgetcpcuts(XPRSprob prob, const XPRScut mindex[], int ncuts, int size, int mtype[], char qrtype[], int mstart[], int mcols[], double dmatval[], double drhs[]);

int XPRS_CC XPRSloadcuts(XPRSprob prob, int itype, int interp, int ncuts, const XPRScut mcutind[]);

int XPRS_CC XPRSstorecuts(XPRSprob prob, int ncuts, int nodupl, const int mtype[], const char qrtype[], const double drhs[], const int mstart[], XPRScut mindex[], const int mcols[], const double dmatval[]);

int XPRS_CC XPRSpresolverow(XPRSprob prob, char qrtype, int nzo, const int mcolso[], const double dvalo[], double drhso, int maxcoeffs, int* nzp, int mcolsp[], double dvalp[], double* drhsp, int* status);

int XPRS_CC XPRSloadmipsol(XPRSprob prob, const double dsol[], int* status);

int XPRS_CC XPRSaddmipsol(XPRSprob prob, int ilength, const double mipsolval[], const int mipsolcol[], const char* solname);

int XPRS_CC XPRSstorebounds(XPRSprob prob, int nbnds, const int mcols[], const char qbtype[], const double dbnd[], void** mindex);

int XPRS_CC XPRSsetbranchcuts(XPRSprob prob, int nbcuts, const XPRScut mindex[]);

int XPRS_CC XPRSsetbranchbounds(XPRSprob prob, void* mindex);

int XPRS_CC XPRSgetlasterror(XPRSprob prob, char* errmsg);

int XPRS_CC XPRSbasiscondition(XPRSprob prob, double* condnum, double* scondnum);

int XPRS_CC XPRSgetmipsol(XPRSprob prob, double _dx[], double _dslack[]);

int XPRS_CC XPRSgetlpsol(XPRSprob prob, double _dx[], double _dslack[], double _dual[], double _dj[]);

int XPRS_CC XPRSpostsolve(XPRSprob prob);

int XPRS_CC XPRSdelsets(XPRSprob prob, int nsets, const int msindex[]);

int XPRS_CC XPRSaddsets(XPRSprob prob, int newsets, int newnz, const char qstype[], const int msstart[], const int mscols[], const double dref[]);

int XPRS_CC XPRSstrongbranch(XPRSprob prob, const int nbnds, const int _mindex[], const char _sboundtype[], const double _dbnd[], const int itrlimit, double _dsbobjval[], int _msbstatus[]);

int XPRS_CC XPRSestimaterowdualranges(XPRSprob prob, const int nRows, const int rowIndices[], const int iterationLimit, double minDualActivity[], double maxDualActivity[]);

int XPRS_CC XPRSgetprimalray(XPRSprob prob, double _dpray[], int* _hasray);

int XPRS_CC XPRSgetdualray(XPRSprob prob, double _ddray[], int* _hasray);

int XPRS_CC XPRSsetmessagestatus(XPRSprob prob, int errcode, int bEnabledStatus);

int XPRS_CC XPRSgetmessagestatus(XPRSprob prob, int errcode, int* bEnabledStatus);

int XPRS_CC XPRSrepairweightedinfeas(XPRSprob prob, int* scode, const double lrp_array[], const double grp_array[], const double lbp_array[], const double ubp_array[], char second_phase, double delta, const char* optflags);

int XPRS_CC XPRSrepairweightedinfeasbounds(XPRSprob prob, int* scode, const double lrp_array[], const double grp_array[], const double lbp_array[], const double ubp_array[], const double lrb_array[], const double grb_array[], const double lbb_array[], const double ubb_array[], char second_phase, double delta, const char* optflags);

int XPRS_CC XPRSrepairinfeas(XPRSprob prob, int* scode, char ptype, char phase2, char globalflags, double lrp, double grp, double lbp, double ubp, double delta);

int XPRS_CC XPRSgetcutslack(XPRSprob prob, XPRScut cut, double* dslack);

int XPRS_CC XPRSgetcutmap(XPRSprob prob, int ncuts, const XPRScut cuts[], int cutmap[]);