include/xprs.bas


Declare PtrSafe Function XPRSiisclear Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSiisfirst Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal iismode As Long, ByRef status_code As Long) As Long
Declare PtrSafe Function XPRSiisnext Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef status_code As Long) As Long
Declare PtrSafe Function XPRSiisstatus Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef iiscount As Long, rowsizes As Long, colsizes As Long, suminfeas As Double, numinfeas As Long) As Long
Declare PtrSafe Function XPRSiisall Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSiiswrite Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal number As Long, ByVal fn As String, ByVal filetype As Long, ByVal typeflags As String) As Long
Declare PtrSafe Function XPRSiisisolations Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal number As Long) As Long
Declare PtrSafe Function XPRSgetiisdata Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal number As Long, ByRef rownumber As Long, ByRef colnumber As Long, miisrow As Long, miiscol As Long, constrainttype As Byte, colbndtype As Byte, duals As Double, rdcs As Double, isolationrows As Byte, isolationcols As Byte) As Long
Declare PtrSafe Function XPRSgetiis Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef ncols As Long, ByRef nrows As Long, miiscol As Long, miisrow As Long) As Long
Declare PtrSafe Function XPRSgetpresolvebasis Lib "XPRS.DLL" (ByVal prob As LongPtr, mrowstatus As Long, mcolstatus As Long) As Long
Declare PtrSafe Function XPRSloadpresolvebasis Lib "XPRS.DLL" (ByVal prob As LongPtr, mrowstatus As Long, mcolstatus As Long) As Long
Declare PtrSafe Function XPRSgetglobal Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef ngents As Long, ByRef nsets As Long, sgtype As Byte, mgcols As Long, dlim As Double, sstype As Byte, msstart As Long, mscols As Long, dref As Double) As Long
Declare PtrSafe Function XPRSwriteprob Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sfilename As String, ByVal sflags As String) As Long
Declare PtrSafe Function XPRSgetnames Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, sbuff As Byte, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetrowtype Lib "XPRS.DLL" (ByVal prob As LongPtr, srowtype As Byte, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSloadsecurevecs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, ByVal ncols As Long, mrow As Long, mcol As Long) As Long
Declare PtrSafe Function XPRSgetcoltype Lib "XPRS.DLL" (ByVal prob As LongPtr, coltype As Byte, ByVal first As Long, ByVal last As Long) As Long
Declare PtrSafe Function XPRSgetbasis Lib "XPRS.DLL" (ByVal prob As LongPtr, mrowstatus As Long, mcolstatus As Long) As Long
Declare PtrSafe Function XPRSloadbasis Lib "XPRS.DLL" (ByVal prob As LongPtr, mrowstatus As Long, mcolstatus As Long) As Long
Declare PtrSafe Function XPRSgetindex Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByVal sname As String, ByRef iseq As Long) As Long
Declare PtrSafe Function XPRSaddrows Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, ByVal ncoeffs As LongLong, srowtype As Byte, drhs As Double, drng As Double, mstart As Long, mclind As Long, dmatval As Double) As Long
Declare PtrSafe Function XPRSdelrows Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mindex As Long) As Long
Declare PtrSafe Function XPRSaddcols Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, ByVal ncoeffs As LongLong, dobj As Double, mstart As Long, mrwind As Long, dmatval As Double, dbdl As Double, dbdu As Double) As Long
Declare PtrSafe Function XPRSdelcols Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, mindex As Long) As Long
Declare PtrSafe Function XPRSchgcoltype Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, mindex As Long, coltype As Byte) As Long
Declare PtrSafe Function XPRSchgrowtype Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mindex As Long, srowtype As Byte) As Long
Declare PtrSafe Function XPRSchgbounds Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nbnds As Long, mindex As Long, sboundtype As Byte, dbnd As Double) As Long
Declare PtrSafe Function XPRSchgobj Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, mindex As Long, dobj As Double) As Long
Declare PtrSafe Function XPRSchgcoef Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal irow As Long, ByVal icol As Long, ByVal dval As Double) As Long
Declare PtrSafe Function XPRSchgmcoef Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncoeffs As LongLong, mrow As Long, mcol As Long, dval As Double) As Long
Declare PtrSafe Function XPRSchgmqobj Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As LongLong, mcol1 As Long, mcol2 As Long, dval As Double) As Long
Declare PtrSafe Function XPRSchgqobj Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal icol As Long, ByVal jcol As Long, ByVal dval As Double) As Long
Declare PtrSafe Function XPRSchgrhs Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mindex As Long, drhs As Double) As Long
Declare PtrSafe Function XPRSchgrhsrange Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nrows As Long, mindex As Long, drng As Double) As Long
Declare PtrSafe Function XPRSchgobjsense Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal objsense As Long) As Long
Declare PtrSafe Function XPRSchgglblimit Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncols As Long, mindex As Long, dlimit As Double) As Long
Declare PtrSafe Function XPRSsave Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSrestore Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal sprobname As String, ByVal force As String) As Long
Declare PtrSafe Function XPRSpivot Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal in_ As Long, ByVal out As Long) As Long
Declare PtrSafe Function XPRSgetpivots Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal in_ As Long, mout As Long, dout As Double, ByRef dobjo As Double, ByRef npiv As Long, ByVal maxpiv As Long) As Long
Declare PtrSafe Function XPRSaddcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncuts As Long, mtype As Long, qrtype As Byte, drhs As Double, mstart As Long, mcols As Long, dmatval As Double) As Long
Declare PtrSafe Function XPRSdelcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ibasis As Long, ByVal itype As Long, ByVal interp As Long, ByVal delta As Double, ByVal ncuts As Long, mcutind As Long) As Long
Declare PtrSafe Function XPRSdelcpcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByVal interp As Long, ByVal ncuts As Long, mcutind As Long) As Long
Declare PtrSafe Function XPRSgetcutlist Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByVal interp As Long, ByRef ncuts As Long, ByVal maxcuts As Long, mcutind As Long) As Long
Declare PtrSafe Function XPRSgetcpcutlist Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByVal interp As Long, ByVal delta As Double, ByRef ncuts As Long, ByVal maxcuts As Long, mcutind As Long, dviol As Double) As Long
Declare PtrSafe Function XPRSgetcpcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, mindex As Long, ByVal ncuts As Long, ByVal size As LongLong, mtype As Long, qrtype As Byte, mstart As Long, mcols As Long, dmatval As Double, drhs As Double) As Long
Declare PtrSafe Function XPRSloadcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal itype As Long, ByVal interp As Long, ByVal ncuts As Long, mcutind As Long) As Long
Declare PtrSafe Function XPRSstorecuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncuts As Long, ByVal nodupl As Long, mtype As Long, qrtype As Byte, drhs As Double, mstart As Long, mindex As Long, mcols As Long, dmatval As Double) As Long
Declare PtrSafe Function XPRSpresolverow Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal qrtype As Byte, ByVal nzo As Long, mcolso As Long, dvalo As Double, ByVal drhso As Double, ByVal maxcoeffs As Long, ByRef nzp As Long, mcolsp As Long, dvalp As Double, ByRef drhsp As Double, ByRef status As Long) As Long
Declare PtrSafe Function XPRSloadmipsol Lib "XPRS.DLL" (ByVal prob As LongPtr, dsol As Double, ByRef status As Long) As Long
Declare PtrSafe Function XPRSaddmipsol Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ilength As Long, mipsolval As Double, mipsolcol As Long, ByVal solname As String) As Long
Declare PtrSafe Function XPRSstorebounds Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nbnds As Long, mcols As Long, qbtype As Byte, dbnd As Double, ByRef mindex As LongPtr) As Long
Declare PtrSafe Function XPRSsetbranchcuts Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nbcuts As Long, mindex As Long) As Long
Declare PtrSafe Function XPRSsetbranchbounds Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal mindex As LongPtr) As Long
Private Declare PtrSafe Function XPRSgetlasterror_C Lib "XPRS.DLL" Alias "XPRSgetlasterror" (ByVal prob As LongPtr, ByVal errmsg As String) As Long
Declare PtrSafe Function XPRSbasiscondition Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef condnum As Double, ByRef scondnum As Double) As Long
Declare PtrSafe Function XPRSgetmipsol Lib "XPRS.DLL" (ByVal prob As LongPtr, dx As Double, dslack As Double) As Long
Declare PtrSafe Function XPRSgetlpsol Lib "XPRS.DLL" (ByVal prob As LongPtr, dx As Double, dslack As Double, dual As Double, dj As Double) As Long
Declare PtrSafe Function XPRSpostsolve Lib "XPRS.DLL" (ByVal prob As LongPtr) As Long
Declare PtrSafe Function XPRSdelsets Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nsets As Long, msindex As Long) As Long
Declare PtrSafe Function XPRSaddsets Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal newsets As Long, ByVal newnz As LongLong, qstype As Byte, msstart As Long, mscols As Long, dref As Double) As Long
Declare PtrSafe Function XPRSstrongbranch Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nbnds As Long, mindex As Long, sboundtype As Byte, dbnd As Double, ByVal itrlimit As Long, dsbobjval As Double, msbstatus As Long) As Long
Declare PtrSafe Function XPRSestimaterowdualranges Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal nRows As Long, rowIndices As Long, ByVal iterationLimit As Long, minDualActivity As Double, maxDualActivity As Double) As Long
Declare PtrSafe Function XPRSgetprimalray Lib "XPRS.DLL" (ByVal prob As LongPtr, dpray As Double, ByRef hasray As Long) As Long
Declare PtrSafe Function XPRSgetdualray Lib "XPRS.DLL" (ByVal prob As LongPtr, ddray As Double, ByRef hasray As Long) As Long
Declare PtrSafe Function XPRSsetmessagestatus Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal errcode As Long, ByVal bEnabledStatus As Long) As Long
Declare PtrSafe Function XPRSgetmessagestatus Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal errcode As Long, ByRef bEnabledStatus As Long) As Long
Declare PtrSafe Function XPRSrepairweightedinfeas Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef scode As Long, lrp_array As Double, grp_array As Double, lbp_array As Double, ubp_array As Double, ByVal second_phase As Byte, ByVal delta As Double, ByVal optflags As String) As Long
Declare PtrSafe Function XPRSrepairweightedinfeasbounds Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef scode As Long, lrp_array As Double, grp_array As Double, lbp_array As Double, ubp_array As Double, lrb_array As Double, grb_array As Double, lbb_array As Double, ubb_array As Double, ByVal second_phase As Byte, ByVal delta As Double, ByVal optflags As String) As Long
Declare PtrSafe Function XPRSrepairinfeas Lib "XPRS.DLL" (ByVal prob As LongPtr, ByRef scode As Long, ByVal ptype As Byte, ByVal phase2 As Byte, ByVal globalflags As Byte, ByVal lrp As Double, ByVal grp As Double, ByVal lbp As Double, ByVal ubp As Double, ByVal delta As Double) As Long
Declare PtrSafe Function XPRSgetcutslack Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal cut As LongPtr, ByRef dslack As Double) As Long
Declare PtrSafe Function XPRSgetcutmap Lib "XPRS.DLL" (ByVal prob As LongPtr, ByVal ncuts As Long, cuts As Long, cutmap As Long) As Long
